HV-2069 Test against JDK 25